Kubernetes 1.18.5实验配置文件/06 Network Policy/02 ipBlock策略模型/networkpolicy-allow-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-all-ingress
spec:
  podSelector:
    matchLabels:
      run: deploy
  policyTypes:
  - Ingress
  ingress:
  - {}
