Kubernetes 1.18.5实验配置文件/06 Network Policy/02 ipBlock策略模型/networkpolicy-allow-cidr-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-cidr-egress
spec:
  podSelector:
    matchLabels:
      run: deploy
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.100/32
    ports:
    - protocol: TCP
      port: 80
