Kubernetes 1.18.5实验配置文件/06 Network Policy/02 ipBlock策略模型/networkpolicy-allow-cidr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-cidr-ingress
spec:
  podSelector:
    matchLabels:
      run: deploy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.189.71/32
    ports:
    - protocol: TCP
      port: 80
