Kubernetes 1.18.5实验配置文件/06 Network Policy/02 ipBlock策略模型/networkpolicy-deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-deny-all-egress
spec:
  podSelector:
    matchLabels:
      run: deploy
  policyTypes:
  - Egress
